8047
"This is an excerpt from the Ensime codebase, which compiles fine with 2.9.2 and 2.10.0-M4."

Please be extremely careful with claims like this; when you are wrong, it is very misleading about where the problem was introduced.
{code}
% m4scalac /scala/trunk/test/files/pos/t6117.scala 
/scala/trunk/test/files/pos/t6117.scala:18: error: reference to foo is ambiguous;
it is imported twice in the same scope by
import importMe._
and import importMe._
  println(foo(1))
          ^
one error found
% m3scalac /scala/trunk/test/files/pos/t6117.scala 
%
{code}
